# projeto_iot

./: README.md  backend.py  backendwokwi.py  disparo.py  docker-compose.yml  frontend.py  pyproject.toml  requirements.txt  simulador_mock.py
