[project]
name = "iot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databases>=0.9.0",
    "fastapi>=0.136.1",
    "fastapi-mqtt>=2.0.0",
    "asyncpg>=0.29.0",
    "ruff>=0.15.12",
    "uvicorn>=0.46.0",
    "flet>=0.85.0",
    "requests>=2.34.0",
    "paho-mqtt>=2.1.0",
    "flet-desktop>=0.85.0",
]
